fixed service heading alignment

--- a/static/style.css
+++ b/static/style.css
@@ -239,6 +239,7 @@ nav a,
 .service-header {
     text-align: center;
     width: 100%;
+    margin-top: 40px;
     margin-bottom: 30px;
 }
 
